[package]
name = "peach-version-checker"
version = "0.1.1"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
regex = "1"
reqwest = { version = "0.11", features = [ "blocking" ] }
semver = "0.11.0"
term = "0.7.0"
tokio = { version = "1", features = ["macros"]  }
